@@ -1,4 +1,4 @@
 DIST rsstorrent-0.8.tar.gz 9637 SHA256 68ad6266a50f702a7a12b60c65cee9059c97c276b760c53d33acd2243c5b40e6 SHA512 01aed7a5483c132d094f4f72e9dc83d74285f90083e3c1323a4572ab9c54364a8345e28240cd9940fe5577f36ee6c86d9de7972ccde70e522d53424571ca04df WHIRLPOOL 0d5d26d110afccaa460625b3de083643314b03382d82fc7ddca48bfd92d3d87baf87a7a80b7ac228ec12e7cb046ad681a61a1458e70bc479344aec3d10ae5cfe
-EBUILD rsstorrent-0.8.ebuild 1153 SHA256 94889f96f374b92d6a5602dc3297e9e2c52d035bcf35b091c8af3c930cf4e5ed SHA512 b4e5168cf832031c478a1b3cc55d914d5d0733c7a08e61c3e2d840b5fc7277abab45c38f908164915ba768f680856fe07231ace9d997fbae5f11e0647d6a26ab WHIRLPOOL 4f24ffaef771dc0931cf2e4d3d4fd31653ded0408f69a4eada046e2ec392ad200db105c0deaf2bd8c8bf8d1bc24a86be014fdebb389b8604ebe7540a3a79aa44
-MISC ChangeLog 1007 SHA256 9e5f1b78754146e232f839ca01268c2cabfd2914c5ead7389d5da921456798bd SHA512 69232f4235e1bc216eaf53838de0e173557808f48d787633d4b0f7a849609ef48eeed9aaa748556b75629eebdc796beb7ce0025efa984981a1df22a2673cdc0d WHIRLPOOL 00c47dcdf7e6b8684a5e74a01002e756ead34e9ca0629420dc4815d217b18690ac2aae9fa123eeaff666daff2445f0adc93f2b5f886576f3fff134ebc47bc1f5
+EBUILD rsstorrent-0.8.ebuild 1196 SHA256 3ca720e3b60351a225e92faf642d4b2e14fbbd9af78d7a64b99b9c021f6c870a SHA512 8bff174aac27bb0360857aa41d6c84a1591c3507dc74901ed4b741eced1a1857fcbeeb732f88dae7263a264bce6d251ba137f05697367127a059d62d1649d70c WHIRLPOOL 69ef49507d7a10bb78e40c5cc8e722b8aaca40db6430be76d10d28be6c6e907aee90f0a98e26748a02d6e321c65d21d12bf8a5a19cd72d807c1d2b42e98778b0
+MISC ChangeLog 1193 SHA256 b5c7c2c3b3c806016257e63bb45b6c4993eb161045b53e179378ea5bc07ea64c SHA512 b31368f05f4b06164583541faa52156d11b95076969e87f310192240c8d9ed662adaadce37bb24ccdf025587369f7f7222f95dc7df1be72c7c1e8871c05442e4 WHIRLPOOL 46a624ff416ef45c61e7c47726abd5fdf03dc9964aad7310cd57dd5ac8038ccf481e6221f028cc294a538c6e236c7e731bcdd2c7a4e867c86050591e49435689
 MISC metadata.xml 331 SHA256 2185e5c2f348af8d2ecdb14e05ccf423abf2e52e4b74c3e159a0015f5e44319d SHA512 9eaecda7f7f083340d886268ac42df9f1e4b7a7940e59d8d3fff9cb8cf5d39378f2d76ad0c666d9213e5a99c99ba940e73bfba66cd8ffdab1647858d44ae4a4d WHIRLPOOL c2dd8ae46d57b24eb0c6e9b412306abfe0acfd58d5a40260428be54ffaea3d83f6aeb4c2fa7d5cbae288cf5e16db35b06f30653529d530f16504f84acbfc1e21
